Desafios/Desafio_2/day-3/task/terraform/sg.tf
resource "aws_security_group" "rules_ssh_web" {
  name        = "ssh_web"
  description = "ssh_web"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [ module.vpc.vpc_cidr_block , var.Local_IP ] 
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Aluno = "MatheusDuarte"
    Gb    = "desenvolve"
  }
  depends_on = [module.vpc]
}
